@@ -1,3 +1,15 @@
+Thu May 17 20:07:21 UTC 2007  Scott Harris  <harris_s@ociweb.com>
+
+        * performance-tests/DCPS/TypeNoKeyBounded/TypeNoKeyBounded.mpc:
+        * performance-tests/DCPS/TCPListenerTest/DataReaderListener.cpp:
+        * performance-tests/DCPS/TCPListenerTest/subscriber.cpp:
+        * performance-tests/DCPS/TCPListenerTest/DataReaderListener.h:
+        * performance-tests/DCPS/TCPListenerTest/Writer.cpp:
+        * performance-tests/DCPS/TCPListenerTest/publisher.cpp:
+
+          Removed --Module Mine and its impacts.
+          Made other remote to local interface changes.
+
 Mon May 14 20:23:33 UTC 2007  Scott Harris  <harris_s@ociweb.com>
 
         * dds/DCPS/ZeroCopySeq_T.h:
